--- a/PhotoSharingApplicacion/packages.config
+++ b/PhotoSharingApplicacion/packages.config
@@ -9,4 +9,8 @@
   <package id="Microsoft.AspNet.WebPages.es" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
+  <package id="MvcSiteMapProvider.MVC5" version="4.6.26" targetFramework="net48" />
+  <package id="MvcSiteMapProvider.MVC5.Core" version="4.6.26" targetFramework="net48" />
+  <package id="MvcSiteMapProvider.Web" version="4.6.26" targetFramework="net48" />
+  <package id="WebActivatorEx" version="2.0.1" targetFramework="net48" />
 </packages>
